# gliclass-rs

./: Cargo.toml  Readme.md
doc/: Changelog.md
examples/: sample1.rs  sample2.rs  sample3.rs  sample4.rs
src/: lib.rs  params.rs  pipeline.rs  tokenizer.rs
src/input/: encoded.rs  mod.rs  prompt.rs  tensors.rs  text.rs
src/output/: classes.rs  mod.rs  tensors.rs
src/util/: error.rs  math.rs  mod.rs  test.rs
